src/opt/tests/snapshots/redundant_obj__across_conditional_breaks_read.snap
---
created: "2019-04-10T04:16:01.852086900Z"
creator: insta@0.7.1
source: src/opt/tests/redundant_obj.rs
expression: "\n    let o = { f: 0 };\n    while (foo) {\n        o.f += 1;\n        if (bar) {\n            break;\n        }\n        g = o.f; // forward\n    }\n"
---
_key = "f"
_val = 0
_ini = { [_key]: _val }
<loop>:
    _whl = <global foo>
    <if> _whl:
        <empty>
    <else>:
        <break>
    _prp = "f"
    _lhs = _ini[_prp]
    _rhs = 1
    _val$1 = _lhs + _rhs
    _ini[_prp] <- _val$1
    _iff = <global bar>
    <if> _iff:
        <break>
    <else>:
        <empty>
    <dead> = "f"
    _val$2 = _val$1
    <global g> <- _val$2
