src/opt/tests/snapshots/redundant_obj__across_conditional_breaks_write.snap
---
created: "2019-04-27T22:01:39.785037400Z"
creator: insta@0.7.4
source: src/opt/tests/redundant_obj.rs
expression: "\n    let o = { f: 0 };\n    while (foo) {\n        o.f += 1; // do not drop\n        if (bar) {\n            break;\n        }\n        o.f = 3;\n    }\n"
---
_key = "f"
_val = 0
o = { [_key]: _val }
<loop>:
    _whl = <global foo>
    <if> _whl:
        <empty>
    <else>:
        <break>
    _prp = "f"
    _lhs = o[_prp]
    _rhs = 1
    _val$1 = _lhs + _rhs
    o[_prp] <- _val$1
    _iff = <global bar>
    <if> _iff:
        <break>
    <else>:
        <empty>
    _prp$1 = "f"
    _val$2 = 3
    o[_prp$1] <- _val$2
