src/opt/tests/snapshots/redundant_obj__basic_read_to_read.snap
---
created: "2019-04-10T04:16:01.851086400Z"
creator: insta@0.7.1
source: src/opt/tests/redundant_obj.rs
expression: "\n    let something = {};\n    foo();\n    g1 = something.x;\n    g2 = something.x;\n"
---
_ini = {  }
_fun = <global foo>
<dead> = _fun()
_prp = "x"
_val = _ini[_prp]
<global g1> <- _val
<dead> = "x"
_val$1 = _val
<global g2> <- _val$1
