src/opt/tests/snapshots/redundant_obj__basic_write_to_read.snap
---
created: "2019-04-27T22:01:39.817873500Z"
creator: insta@0.7.4
source: src/opt/tests/redundant_obj.rs
expression: "\n    let something = {};\n    foo(something);\n    something.x = x;\n    g = something.x;\n"
---
something = {  }
_fun = <global foo>
<dead> = _fun(something)
_prp = "x"
_val = <global x>
something[_prp] <- _val
<dead> = "x"
_val$1 = _val
<global g> <- _val$1
