src/opt/tests/snapshots/redundant_obj__basic_write_to_write.snap
---
created: "2019-04-27T22:01:39.817873500Z"
creator: insta@0.7.4
source: src/opt/tests/redundant_obj.rs
expression: "\n    let something = {};\n    foo(something);\n    something.x = x;\n    something.x = y;\n"
---
something = {  }
_fun = <global foo>
<dead> = _fun(something)
<dead> = "x"
<dead> = <global x>
_prp = "x"
_val = <global y>
something[_prp] <- _val
