src/opt/tests/snapshots/redundant_obj__call_receiver.snap
---
created: "2019-04-20T20:35:02.900961600Z"
creator: insta@0.7.4
source: src/opt/tests/redundant_obj.rs
expression: "\n    let something = { x: function() {} };\n    something.x(); // receives `this`: do not opt\n    let something2 = { x: function() {} };\n    (0, something2.x)(); // does not receive `this`: opt\n"
---
_key = "x"
_val = <function>:
    <empty>
_ini = { [_key]: _val }
_prp = "x"
<dead> = _ini[_prp]()
_key$1 = "x"
_val$1 = <function>:
    <empty>
<dead> = { [_key$1]: _val$1 }
<dead> = "x"
_fun = _val$1
<dead> = _fun()
