src/opt/tests/snapshots/redundant_obj__invalid_different_props.snap
---
created: "2019-04-10T03:55:05.108857400Z"
creator: insta@0.7.1
source: src/opt/tests/redundant_obj.rs
expression: "\n    let something = {};\n    foo();\n    g1 = something.x;\n    g2 = something.y;\n"
---
_ini = {  }
_fun = <global foo>
<dead> = _fun()
_prp = "x"
_val = _ini[_prp]
<global g1> <- _val
_prp$1 = "y"
_val$1 = _ini[_prp$1]
<global g2> <- _val$1
