src/opt/tests/snapshots/redundant_obj__invalidate_escape.snap
---
created: "2019-04-27T22:01:39.885873900Z"
creator: insta@0.7.4
source: src/opt/tests/redundant_obj.rs
expression: "\n    let something = { x: 1 };\n    let no_escape = { y: 2 };\n    if (foo) {\n        g = something;\n    }\n    g1 = something.x;\n    g2 = no_escape.y; // forward\n"
---
_key = "x"
_val = 1
something = { [_key]: _val }
_key$1 = "y"
_val$1 = 2
<dead> = { [_key$1]: _val$1 }
_iff = <global foo>
<if> _iff:
    <global g> <- something
<else>:
    <empty>
_prp = "x"
_val$2 = something[_prp]
<global g1> <- _val$2
<dead> = "y"
_val$3 = _val$1
<global g2> <- _val$3
