src/opt/tests/snapshots/redundant_obj__reads_dont_propagate_to_parent.snap
---
created: "2019-04-27T22:01:39.992869Z"
creator: insta@0.7.4
source: src/opt/tests/redundant_obj.rs
expression: "\n    let obj = { foo: 1 };\n    invalidate();\n    if (bar) {\n        g = obj.foo;\n    } else {\n        g = obj.foo;\n    }\n"
---
_key = "foo"
_val = 1
obj = { [_key]: _val }
_fun = <global invalidate>
<dead> = _fun()
_iff = <global bar>
<if> _iff:
    _prp = "foo"
    _val$1 = obj[_prp]
    <global g> <- _val$1
<else>:
    _prp = "foo"
    _val$1 = obj[_prp]
    <global g> <- _val$1
