src/opt/tests/snapshots/redundant_obj__switch_invalidate_local.snap
---
created: "2019-04-27T22:01:40.026872900Z"
creator: insta@0.7.4
source: src/opt/tests/redundant_obj.rs
expression: "\n    let a = { outer: 1 };\n    switch (x) {\n        case 1:\n            a.inner = 2;\n            a.inner;\n        case 2:\n            a.inner; // don't forward\n    }\n    a.outer;\n"
---
_key = "outer"
_val = 1
a = { [_key]: _val }
_swi = <global x>
_tst = 1
_tst$1 = 2
<switch> _swi:
    <case> _tst:
    _prp = "inner"
    _val$1 = 2
    a[_prp] <- _val$1
    <dead> = "inner"
    <dead> = _val$1
    <case> _tst$1:
    _prp$1 = "inner"
    <dead> = a[_prp$1]
<dead> = "outer"
<dead> = _val
